--- a/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
@@ -357,7 +357,7 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="660.66666666666663"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="oHd-zl-Tmv" userLabel="Content Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="555.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="532"/>
                                         <subviews>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pEl-4t-h4D" userLabel="Horizontal Scroll View">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="330.33333333333331"/>
@@ -366,7 +366,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="0.0" height="330.33333333333331"/>
                                                         <subviews>
                                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FVe-LJ-ivg">
-                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="264.33333333333331"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="264.66666666666669"/>
                                                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </view>
                                                         </subviews>
@@ -400,8 +400,15 @@
                                                     </label>
                                                 </subviews>
                                             </stackView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nw5-Xt-fKH" userLabel="Division View">
+                                                <rect key="frame" x="9.3333333333333428" y="403" width="356.33333333333326" height="3"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="3" id="tLo-FK-SlD"/>
+                                                </constraints>
+                                            </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="le8-v4-LtK" userLabel="Info Stack View">
-                                                <rect key="frame" x="18.666666666666657" y="403" width="337.66666666666674" height="106"/>
+                                                <rect key="frame" x="18.666666666666657" y="416" width="337.66666666666674" height="106"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="4pk-3C-dO0">
                                                         <rect key="frame" x="0.0" y="0.0" width="67.666666666666671" height="106"/>
@@ -487,26 +494,8 @@
                                                     <constraint firstItem="4pk-3C-dO0" firstAttribute="width" secondItem="le8-v4-LtK" secondAttribute="width" multiplier="0.2" id="mhz-Jc-YIb"/>
                                                 </constraints>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aMr-gK-kAh" userLabel="Pre Stack View">
-                                                <rect key="frame" x="0.0" y="519" width="375" height="26.333333333333371"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이만큼 배송됩니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8m-qF-7RO">
-                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="25.333333333333332"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rMi-v9-cX1">
-                                                        <rect key="frame" x="0.0" y="25.333333333333371" width="375" height="1"/>
-                                                        <color key="backgroundColor" name="divisionColor"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="1" id="YSt-Pp-IEt"/>
-                                                        </constraints>
-                                                    </view>
-                                                </subviews>
-                                            </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wrf-Me-EJX" userLabel="Image Stack View">
-                                                <rect key="frame" x="0.0" y="555.33333333333337" width="375" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="532" width="375" height="0.0"/>
                                                 <subviews>
                                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faR-Jc-ShR" userLabel="이">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
@@ -529,16 +518,15 @@
                                 <constraints>
                                     <constraint firstItem="J91-gK-g6H" firstAttribute="height" secondItem="ivL-gb-VLH" secondAttribute="height" multiplier="0.08" id="1hJ-Yd-2yB"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="bottom" secondItem="WhL-ax-RIN" secondAttribute="bottom" id="2ap-JU-kEw"/>
-                                    <constraint firstItem="aMr-gK-kAh" firstAttribute="height" secondItem="ivL-gb-VLH" secondAttribute="height" multiplier="0.04" id="8Zb-3M-cpg"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" id="FXr-kX-ZcU"/>
                                     <constraint firstItem="le8-v4-LtK" firstAttribute="height" secondItem="ivL-gb-VLH" secondAttribute="height" multiplier="0.16" id="Ggx-5M-0Eo"/>
                                     <constraint firstItem="Wrf-Me-EJX" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" id="NF2-St-gk9"/>
+                                    <constraint firstItem="nw5-Xt-fKH" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" multiplier="0.95" id="QYa-7i-gJl"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="leading" secondItem="WhL-ax-RIN" secondAttribute="leading" id="X3K-Vv-8kP"/>
                                     <constraint firstItem="pEl-4t-h4D" firstAttribute="height" secondItem="ivL-gb-VLH" secondAttribute="height" multiplier="0.5" id="cLC-V0-cLb"/>
                                     <constraint firstItem="J91-gK-g6H" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" multiplier="0.9" id="eDR-iO-6Y8"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="trailing" secondItem="WhL-ax-RIN" secondAttribute="trailing" id="gzg-ey-xtg"/>
                                     <constraint firstItem="pEl-4t-h4D" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" id="iDQ-aA-BPf"/>
-                                    <constraint firstItem="aMr-gK-kAh" firstAttribute="width" secondItem="ivL-gb-VLH" secondAttribute="width" id="p2Y-QB-txc"/>
                                     <constraint firstItem="oHd-zl-Tmv" firstAttribute="top" secondItem="WhL-ax-RIN" secondAttribute="top" id="uXo-8p-QAm"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="WhL-ax-RIN"/>
@@ -575,6 +563,7 @@
                         <outlet property="mileageLabel" destination="GJx-wA-RDs" id="BpZ-iR-riq"/>
                         <outlet property="thumbnailScrollView" destination="pEl-4t-h4D" id="l8V-QT-Qe5"/>
                         <outlet property="thumbnailStackView" destination="ZVb-d1-dud" id="Zx5-iE-HxZ"/>
+                        <outlet property="titleLabel" destination="4fG-oy-fpg" id="C25-W7-ZDL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RnT-XR-7sI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -606,9 +595,6 @@
         </namedColor>
         <namedColor name="PrimaryColor">
             <color red="0.37254901960784315" green="0.74509803921568629" blue="0.73333333333333328" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="divisionColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </namedColor>
     </resources>
 </document>
