--- a/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/SideDish/SideDish/StoryBoard/Base.lproj/Main.storyboard
@@ -581,9 +581,28 @@
                     <view key="view" contentMode="scaleToFill" id="xAX-vB-w1e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NMe-0G-KgD">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="NMe-0G-KgD" firstAttribute="leading" secondItem="1Ig-3b-yGK" secondAttribute="leading" id="BUG-cA-dYb"/>
+                            <constraint firstItem="NMe-0G-KgD" firstAttribute="top" secondItem="1Ig-3b-yGK" secondAttribute="top" id="MLs-C5-1S4"/>
+                            <constraint firstItem="1Ig-3b-yGK" firstAttribute="bottom" secondItem="NMe-0G-KgD" secondAttribute="bottom" id="cBF-Hk-0k3"/>
+                            <constraint firstItem="1Ig-3b-yGK" firstAttribute="trailing" secondItem="NMe-0G-KgD" secondAttribute="trailing" id="ijZ-gp-6ac"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="1Ig-3b-yGK"/>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="NMe-0G-KgD" id="qZM-FG-WVJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4xo-FV-82c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -592,7 +611,7 @@
         <!--Navigation Controller-->
         <scene sceneID="eCI-H7-iIn">
             <objects>
-                <navigationController storyboardIdentifier="navi" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" navigationBarHidden="YES" id="4Oz-7T-9hJ" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NavigationController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" navigationBarHidden="YES" id="4Oz-7T-9hJ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Gf8-ef-hag">
                         <autoresizingMask key="autoresizingMask"/>
